# authpulse-aws-streaming-security-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.checkpoints/: replay_dev.json
.github/workflows/: cd_infra.yml  ci.yml
analytics/: athena_queries.sql  kpis.md
architecture/: dataflow-sequence.md  system-overview.md
ci-cd/github-actions/: cd_app.yml  cd_infra.yml
config/: dev.yaml  logging.yaml  prod.yaml
dashboards/: kpi_definitions.md  quicksight_setup.md
data/sample/: README.md  auth_sample.csv
docs/: architecture.md  data_contracts.md  data_flow.md  day5_flink_job.md  day6_state_features.md  day7_risk_rules.md  design_decisions.md  faq_interview.md  observability_test_plan.md  runbook_operations.md  sla_definition.md
infra/terraform/: README.md
lakehouse/: iceberg_ddl.sql  table_definitions.sql
monitoring/: cloudwatch_metrics.md  sla_checks.sql
notebooks/: exploration.ipynb
observability/: cloudwatch_dashboards.json
observability/alarms/: flink_error_alarms.tf  kinesis_lag_alarms.tf
observability/logs/: log_structure.md
producer/: replay_producer.py
scripts/: commit.ps1  deploy_infra.ps1  load_sample_to_kinesis.sh  run_daily_batch.py  run_local_stack.sh  run_tests.ps1  setup_env.ps1  setup_env.sh  terraform.ps1
src/batch/: __init__.py
src/common/: __init__.py  io_utils.py  logging_utils.py  metrics.py  models.py
src/ingest/: __init__.py  replay_lanl.py
src/producer/: __init__.py  config_loader.py  replay_lanl.py
streaming/: config.py  risk_engine.py  schemas.py  spark_streaming_job.py  window_metrics.py
(+65 files in other folders)
