[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "authpulse"
version = "0.1.0"
description = "AuthPulse: Real-Time Authentication Risk & Behavior Analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0.1",
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "moto>=5.0",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["common*", "producer*", "stream*", "batch*", "quality*", "ingest*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["ci-cd/tests"]
